# libmad

./: CMakeLists.txt  README  fpm.h.in  mad.h.header.in  minimad.c
cmake.config/: CMakeLists.txt  config.h.in
packaging.cmake/: libmad.pc.in
